Created interface for activating people.